# CraftingInterpreters

./: .gitignore
JLOX/: CMakeLists.txt  file.lox
JLOX/include/: Environment.hpp  Error.hpp  Expr.hpp  Helper.hpp  Interpreter.hpp  Lox.hpp  Object.hpp  Parser.hpp  PrettyPrinter.hpp  RuntimeError.hpp  Scanner.hpp  Stmt.hpp  Token.hpp  TokenType.hpp
JLOX/src/: Environment.cpp  Error.cpp  Interpreter.cpp  Lox.cpp  Parser.cpp  PrettyPrinter.cpp  Scanner.cpp  Token.cpp  main.cpp
JLOX/test/: Expr.hpp  Token.cpp  Token.hpp  build.sh  main.cpp  test
JLOX/tool/: build.sh  generate_ast  generate_ast.cpp
JLOX/tool/Exprs/: Expr.hpp  Exprs.hpp  Stmt.hpp
